[metadata]
name = fp2md4roam-romilly
version = 0.0.1
author = Romilly Cocking
author_email = romilly.cocking@gmail.com
description = Convert Freeplane Mind Map to Markdown for import into Roam
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romilly/fp2md4roam
project_urls =
    Bug Tracker = https://github.com/romilly/fp2md4roam/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    convert_map = fp2md4roam:converter

[options.packages.find]
where = src